--- a/services/ts/markdown-graph/package.json
+++ b/services/ts/markdown-graph/package.json
@@ -4,7 +4,7 @@
     "main": "dist/index.js",
     "type": "module",
     "scripts": {
-        "build": "tsc && node scripts/patch-imports.js | true",
+        "build": "tsc && node scripts/patch-imports.js ",
         "build:check": "tsc --noEmit --incremental false",
         "test": "pnpm run build && ava",
         "coverage": "pnpm run build && c8 ava",
@@ -14,6 +14,7 @@
         "start:dev": "node --loader ts-node/esm src/index.ts"
     },
     "dependencies": {
+        "@types/body-parser": "^1.19.5",
         "body-parser": "^1.20.3",
         "express": "^4.21.2",
         "mongodb": "^6.17.0"
