--- a/services/ts/smartgpt-bridge/package.json
+++ b/services/ts/smartgpt-bridge/package.json
@@ -10,24 +10,26 @@
         "symbols": "node src/cli-symbols.js",
         "test": "ava",
         "test:watch": "ava -w",
+        "build": "echo 'I really should have a build script, but I don't.'",
         "test:coverage": "c8 -r text -r text-summary -r lcov -r html ava"
     },
     "dependencies": {
         "@fastify/static": "^7.0.4",
+        "@fastify/swagger": "^8.15.0",
+        "@fastify/swagger-ui": "^1.10.2",
         "@shared/ts": "file:../../../shared/ts",
+        "ajv-formats": "^3.0.1",
         "chromadb": "^1.8.1",
         "dotenv": "^17.2.1",
         "execa": "^9.6.0",
         "fast-glob": "^3.3.2",
         "fastify": "^4.28.1",
-        "@fastify/swagger": "^8.15.0",
-        "@fastify/swagger-ui": "^1.10.2",
         "jose": "^5.10.0",
         "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.8.0",
         "nanoid": "^5.0.7",
         "node-pty": "^1.0.0",
         "typescript": "^5.6.2",
-        "mongoose": "^8.8.0",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
