--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ catalog.org
 services/ts/smartgpt-bridge/logs/indexer/_home_err_devel_promethean/bootstrap.json
 
 .cache/
+
+services/ts/smartgpt-bridge/logs/agents/
