--- a/services/ts/smartgpt-bridge/package.json
+++ b/services/ts/smartgpt-bridge/package.json
@@ -10,7 +10,7 @@
         "symbols": "node src/cli-symbols.js",
         "test": "ava",
         "test:watch": "ava -w",
-        "build": "echo 'I really should have a build script, but I don't.'",
+        "build": "echo nope",
         "test:coverage": "c8 -r text -r text-summary -r lcov -r html ava"
     },
     "dependencies": {
