--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "test": "ava tests/*.test.js",
         "coverage": "c8 ava tests/*.test.js",
         "build:docs": "node scripts/generate-service-docs.js",
-        "prom": "node ./scripts/prom.js"
+        "prom": "node ./scripts/prom.js",
+        "health:node-abi": "node -p \"process.versions.node + ' ABI ' + process.versions.modules\""
     },
     "dependencies": {
         "@shared/js": "file:shared/js",
@@ -35,6 +36,10 @@
     },
     "license": "GPL-3.0-only",
     "volta": {
-        "node": "20.19.4"
+        "node": "20.19.4",
+        "pnpm": "9.0.0"
+    },
+    "engines": {
+        "node": "20.x"
     }
 }
