--- a/services/ts/smartgpt-bridge/package.json
+++ b/services/ts/smartgpt-bridge/package.json
@@ -35,6 +35,7 @@
     "devDependencies": {
         "ava": "^6.1.3",
         "c8": "^9.1.0",
+        "mongodb-memory-server": "^10.1.4",
         "sinon": "^17.0.1"
     }
 }
