--- a/shared/ts/package.json
+++ b/shared/ts/package.json
@@ -15,11 +15,14 @@
         "prom-lisp": "dist/cli/lisp.js"
     },
     "dependencies": {
+        "@types/javascript-time-ago": "^2.5.0",
         "body-parser": "^1.20.2",
         "chromadb": "^3.0.14",
         "duckduckgo-search": "^1.0.7",
         "express": "^4.19.2",
+        "javascript-time-ago": "^2.5.11",
         "mongodb": "^6.18.0",
+        "ollama": "^0.5.17",
         "prom-client": "^15.1.0",
         "sucrase": "^3.35.0",
         "ws": "^8.18.0",
