--- a/shared/sibilant/package.json
+++ b/shared/sibilant/package.json
@@ -8,5 +8,8 @@
     },
     "keywords": [],
     "author": "",
-    "license": "GPL-3.0-only"
+    "license": "GPL-3.0-only",
+    "dependencies": {
+        "source-map-support": "^0.5.21"
+    }
 }
