refactor: use DualStore in kanban processor

--- a/services/ts/kanban-processor/package.json
+++ b/services/ts/kanban-processor/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@shared/js": "file:../../../shared/js",
+        "@shared/ts": "file:../../../shared/ts",
         "mongodb": "^6.17.0",
         "ws": "^8.18.0"
     },
