--- a/services/ts/markdown-graph/package.json
+++ b/services/ts/markdown-graph/package.json
@@ -14,10 +14,10 @@
         "start:dev": "node --loader ts-node/esm src/index.ts"
     },
     "dependencies": {
+        "@shared/ts": "file:../../../shared/ts",
         "@types/body-parser": "^1.19.5",
         "body-parser": "^1.20.3",
-        "express": "^4.21.2",
-        "mongodb": "^6.17.0"
+        "express": "^4.21.2"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
