--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -8,7 +8,8 @@
         "dev": "tsx src/index.ts",
         "test": "pnpm build && ava dist/test/**/*.js",
         "lint": "eslint .",
-        "format": "eslint . --fix"
+        "format": "eslint . --fix",
+        "smoke": "tsx scripts/mcp-call.ts"
     },
     "dependencies": {
         "ws": "^8.18.3",
