--- a/packages/mcp-server/tsconfig.json
+++ b/packages/mcp-server/tsconfig.json
@@ -9,6 +9,6 @@
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["src/**/*.ts", "test/**/*.ts"],
+    "include": ["src/**/*.ts", "test/**/*.ts", "scripts/**/*.ts"],
     "exclude": ["dist"]
 }
