--- a/shared/ts/package.json
+++ b/shared/ts/package.json
@@ -5,8 +5,9 @@
     "scripts": {
         "build": "tsc",
         "lisp": "node dist/cli/lisp.js",
-        "test": "pnpm run build && ava --config ../../config/ava.config.mjs dist/tests/url.test.js dist/tests/fileExplorer.test.js dist/tests/stream-title.test.js",
-        "coverage": "pnpm run build && c8 ava --config ../../config/ava.config.mjs dist/tests/url.test.js dist/tests/fileExplorer.test.js dist/tests/stream-title.test.js",
+        "test": "pnpm run build && ava --config ../../config/ava.config.mjs",
+        "coverage": "pnpm run build && c8 ava --config ../../config/ava.config.mjs",
+        "test:markdown": "pnpm run build && ava --config ../../config/ava.config.mjs dist/tests/markdown.*.test.js",
         "lint": "pnpm exec biome lint .",
         "format": "pnpm exec biome format --write .",
         "clean": "rimraf dist"
@@ -27,15 +28,25 @@
     },
     "dependencies": {
         "@types/javascript-time-ago": "^2.5.0",
+        "@types/unist": "^3.0.3",
         "body-parser": "^1.20.2",
         "chromadb": "^3.0.14",
         "duckduckgo-search": "^1.0.7",
         "express": "^4.19.2",
+        "gray-matter": "^4.0.3",
         "javascript-time-ago": "^2.5.11",
         "mongodb": "^6.18.0",
         "ollama": "^0.5.17",
         "prom-client": "^15.1.0",
+        "remark-gfm": "^4.0.1",
+        "remark-parse": "^11.0.0",
+        "remark-stringify": "^11.0.0",
         "sucrase": "^3.35.0",
+        "unified": "^11.0.5",
+        "unist": "^0.0.1",
+        "unist-util-to-string-with-nodes": "^0.1.1",
+        "unist-util-visit": "^5.0.0",
+        "uuid": "^11.1.0",
         "ws": "^8.18.0",
         "yaml": "^2.5.1",
         "zod": "^3.23.8"
