--- a/shared/ts/tsconfig.json
+++ b/shared/ts/tsconfig.json
@@ -1,25 +1,11 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig.json",
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "ESNext",
-        "moduleResolution": "Node",
-        "strict": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true,
-        "declaration": true,
-        "declarationMap": true,
-        "importHelpers": false,
-        "newLine": "lf",
-        "noEmitHelpers": true,
-        "outDir": "dist",
-        "baseUrl": ".",
-        "removeComments": false,
-        "sourceMap": true,
-        "outDir": "dist",
-        "lib": ["ES2022"]
+        "baseUrl": "./src",
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
+    "extends": "../../config/tsconfig.base.json",
     "include": ["./src/**/*.ts"],
     "exclude": ["node_modules"]
 }
