--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@biomejs/biome": "^2.2.2",
         "@types/jest": "^30.0.0",
         "@types/mongodb": "^4.0.6",
+        "@types/node": "20.19.11",
         "@typescript-eslint/eslint-plugin": "^8.39.0",
         "@typescript-eslint/parser": "^8.39.0",
         "ava": "^6.4.1",
