--- a/packages/unified-indexer/tsconfig.json
+++ b/packages/unified-indexer/tsconfig.json
@@ -5,13 +5,5 @@
     "rootDir": "./src"
   },
   "include": ["src/**/*"],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "src/tests/corrected.test.ts",
-    "src/tests/cross-domain-search-engine.test.ts",
-    "src/tests/types/*.test.ts",
-    "src/tests/unified-indexer-service.test.ts",
-    "src/tests/utils/*.ts"
-  ]
+  "exclude": ["dist", "node_modules"]
 }
